# grounded-novelty-ai-69c6-claude

./: .gitignore  .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: extract_notes_wf.js  idea.yaml  paper_notes.json  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/hypogen/: samples.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: benchmark_and_dataset_for_evaluating_LLM_research_idea_and_scientific_hypothesis_20260618_182150.jsonl  grounding_novelty_in_LLM_scientific_idea_and_hypothesis_generation_20260618_181732.jsonl  literature-based_hypothesis_generation_novelty_grounding_induction_deduction_fee_20260618_182107.jsonl
papers/: README.md  _arxiv_manifest.json  _papers_meta.json
results/: analysis_summary.json  judge_scores.jsonl  objective_metrics.json  pairwise.jsonl  per_idea_table.csv  qualitative_examples.json
results/model_outputs/: ideas.jsonl  prior_work_corpus.json
src/: analyze.py  conditions.py  config.py  corpus.py  generate.py  judge.py  llm.py  metrics.py  run_all.py
