[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=4.0.0",
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.20.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "openai>=2.43.0",
    "pandas>=2.3.3",
    "pypdf>=6.13.3",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sentence-transformers>=5.6.0",
    "statsmodels>=0.14.6",
]

[tool.uv]
package = false
